updates with insipid theme

--- a/docs/figure2.ipynb
+++ b/docs/figure2.ipynb
@@ -18,7 +18,7 @@
     "import nibabel as nib\n",
     "from nilearn.plotting import view_img\n",
     "\n",
-    "zmap = nib.load('../data/unthresh_Z.nii.gz')\n",
+    "zmap = nib.load('data/unthresh_Z.nii.gz')\n",
     "view_img(zmap, threshold=2.8, figsize=(25,10))"
    ]
   }
