--- a/_sources/study2.ipynb
+++ b/_sources/study2.ipynb
@@ -69,7 +69,7 @@
    "id": "banned-biodiversity",
    "metadata": {},
    "source": [
-    "# Table 2\n",
+    "## Table 2\n",
     "\n",
     "We can also generate a coordinate table from the statistical map."
    ]
