ton of updates with jupyter

--- a/docs/jupyter.ipynb
+++ b/docs/jupyter.ipynb
@@ -4,9 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/shawnrhoads/gu-psyc-347/blob/master/docs/module-01-00_Jupyter-Notebooks.ipynb\" target=\"_blank\">![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)</a>\n",
-    "\n",
-    "\n",
     "# Jupyter Notebooks\n",
     "\n",
     "## What are Jupyter Notebooks?\n",
@@ -256,6 +253,13 @@
     "- [Awesome notebooks](https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks)\n",
     "- [Neuroimaging in Python](https://github.com/datacarpentry/python-neuroimaging-lesson)\n",
     "- [Google Colaboratory](https://colab.research.google.com/notebooks/welcome.ipynb#recent=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/shawnrhoads/executable-book-template/blob/main/docs/jupyter.ipynb\" target=\"_blank\" style text-align=\"center\">![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)</a>"
    ]
   }
  ],
