--- a/docs/Python.ipynb
+++ b/docs/Python.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "closing-camel",
    "metadata": {},
    "source": [
     "# Python Code\n",
@@ -11,18 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "electrical-halloween",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# let's grab the titanic data from online\n",
+    "import requests, pandas as pd\n",
+    "\n",
+    "url = 'https://raw.githubusercontent.com/shawnrhoads/gu-psyc-347/master/docs/data/titanic.csv'\n",
+    "r = requests.get(url, allow_redirects=True)\n",
+    "filename = 'data/titanic.csv'\n",
+    "\n",
+    "open(filename, 'wb').write(r.content)\n",
+    "titanic = pd.read_csv(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x = [1,2,3,4,6,7,8,9]\n",
     "print(x)"
@@ -45,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
