--- a/_sources/study2.ipynb
+++ b/_sources/study2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "extreme-requirement",
    "metadata": {},
    "source": [
     "# Study 2\n",
@@ -12,7 +11,54 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bulgarian-train",
+   "metadata": {},
+   "source": [
+    "For group-level statistical inference, we ran a sign permutation test using the following `bash` command with `AFNI` to run `3dttest++` with `-Clustsim`:\n",
+    "\n",
+    "```\n",
+    "dirA=mnt/data/study/firstlevel_glm/\n",
+    "3dttest++ -prefix /mnt/data/study/results/Condition_A.nii.gz \\\n",
+    "          -mask /mnt/data/study/code/modeling/MNI152-graymatter-thr50-2mm.nii.gz \\\n",
+    "          -Clustsim \\\n",
+    "          -setA Condition_A \\\n",
+    "             101 \"$dirA/sub-101_stats.nii.gz[0]\" \\\n",
+    "             102 \"$dirA/sub-102_stats.nii.gz[0]\" \\\n",
+    "             103 \"$dirA/sub-103_stats.nii.gz[0]\" \\\n",
+    "             104 \"$dirA/sub-104_stats.nii.gz[0]\" \\\n",
+    "             105 \"$dirA/sub-105_stats.nii.gz[0]\" \\\n",
+    "             106 \"$dirA/sub-106_stats.nii.gz[0]\" \\\n",
+    "             107 \"$dirA/sub-107_stats.nii.gz[0]\" \\\n",
+    "             108 \"$dirA/sub-108_stats.nii.gz[0]\" \\\n",
+    "             109 \"$dirA/sub-109_stats.nii.gz[0]\" \\\n",
+    "             110 \"$dirA/sub-110_stats.nii.gz[0]\" \\\n",
+    "             111 \"$dirA/sub-111_stats.nii.gz[0]\" \\\n",
+    "             112 \"$dirA/sub-112_stats.nii.gz[0]\" \\\n",
+    "             113 \"$dirA/sub-113_stats.nii.gz[0]\" \\\n",
+    "             115 \"$dirA/sub-115_stats.nii.gz[0]\" \\\n",
+    "             201 \"$dirA/sub-201_stats.nii.gz[0]\" \\\n",
+    "             202 \"$dirA/sub-202_stats.nii.gz[0]\" \\\n",
+    "             203 \"$dirA/sub-203_stats.nii.gz[0]\" \\\n",
+    "             204 \"$dirA/sub-204_stats.nii.gz[0]\" \\\n",
+    "             205 \"$dirA/sub-205_stats.nii.gz[0]\" \\\n",
+    "             206 \"$dirA/sub-206_stats.nii.gz[0]\" \\\n",
+    "             207 \"$dirA/sub-207_stats.nii.gz[0]\" \\\n",
+    "             208 \"$dirA/sub-208_stats.nii.gz[0]\" \\\n",
+    "             209 \"$dirA/sub-209_stats.nii.gz[0]\" \\\n",
+    "             210 \"$dirA/sub-210_stats.nii.gz[0]\" \\\n",
+    "             211 \"$dirA/sub-211_stats.nii.gz[0]\" \\\n",
+    "             212 \"$dirA/sub-212_stats.nii.gz[0]\" \\\n",
+    "             213 \"$dirA/sub-213_stats.nii.gz[0]\" \\\n",
+    "             215 \"$dirA/sub-215_stats.nii.gz[0]\"\n",
+    "```\n",
+    "\n",
+    "We thresholded our image using the following `bash` command with `AFNI` to run `3dClusterize`:\n",
+    "```\n",
+    "3dClusterize -nosum -1Dformat -inset /mnt/data/study/results/Condition_A.nii.gz -idat 1 -ithr 1 -NN 2 -clust_nvox 9 -bisided -2.8 2.8 -pref_map Clust_mask\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Figure 2\n",
@@ -23,7 +69,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "classical-advocate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +81,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "economic-conclusion",
    "metadata": {},
    "source": [
     "Here is the statistic map on a surface mesh.\n",
@@ -47,7 +91,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "russian-sixth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +101,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dirty-soccer",
    "metadata": {},
    "source": [
     "<hr>"
@@ -66,7 +108,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "banned-biodiversity",
    "metadata": {},
    "source": [
     "## Table 2\n",
@@ -77,7 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "comparable-meter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
