--- a/docs/R.ipynb
+++ b/docs/R.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "authentic-plaintiff",
    "metadata": {},
    "source": [
     "# R Code\n",
@@ -12,18 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "dressed-appraisal",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] 1 2 3 4 6 7 8 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "titanic <- read.csv(url(\"https://raw.githubusercontent.com/shawnrhoads/executable-book-template/main/docs/data/titanic.csv\"))\n",
+    "print(head(titanic[2:5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x <- c(1,2,3,4,6,7,8,9)\n",
     "print(x)"
@@ -42,7 +42,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
