--- a/_sources/Python.ipynb
+++ b/_sources/Python.ipynb
@@ -15,14 +15,10 @@
    "outputs": [],
    "source": [
     "# let's grab the titanic data from online\n",
-    "import requests, pandas as pd\n",
+    "import pandas as pd\n",
     "\n",
-    "url = 'https://raw.githubusercontent.com/shawnrhoads/gu-psyc-347/master/docs/data/titanic.csv'\n",
-    "r = requests.get(url, allow_redirects=True)\n",
-    "filename = 'data/titanic.csv'\n",
-    "\n",
-    "open(filename, 'wb').write(r.content)\n",
-    "titanic = pd.read_csv(filename)"
+    "titanic = pd.read_csv('https://raw.githubusercontent.com/shawnrhoads/executable-book-template/main/docs/data/titanic.csv')\n",
+    "display(titanic.iloc[:,1:5].head())"
    ]
   },
   {
