--- a/docs/jupyter.ipynb
+++ b/docs/jupyter.ipynb
@@ -15,7 +15,7 @@
     "<p>Jupyter Notebooks are a spin-off project from the IPython project, which used to have an IPython Notebook project itself. The name, Jupyter, comes from the core supported programming languages that it supports: Julia, Python, and R. Jupyter ships with the IPython kernel, which allows you to write your programs in Python, but there are currently over 100 other kernels that you can also use.</p>\n",
     "</blockquote>\n",
     "\n",
-    "[Anaconda](http://jupyter.org/) (which we've just downloaded) comes with many scientific libraries preinstalled, including the Jupyter Notebook!\n"
+    "[Anaconda](https://docs.anaconda.com/anaconda/install/) (which we've just downloaded) comes with many scientific libraries preinstalled, including the Jupyter Notebook!\n"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "metadata": {},
    "source": [
     "### Markdown\n",
-    "See this [comprehensive guide to Markdown](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet). Here are some examples:\n",
+    "See this [comprehensive guide to Markdown](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet) or [Tutorial](https://www.markdowntutorial.com/). Here are some examples:\n",
     "\n",
     "#### Emphasis\n",
     "Emphasis, aka italics, with *asterisks* or _underscores_.\n",
