--- a/_sources/study1.ipynb
+++ b/_sources/study1.ipynb
@@ -64,7 +64,7 @@
     "    p_val = f'p={p:.3f}'\n",
     "\n",
     "print(f'For every unit increase in x, the predicted value of y increases by {slope:.2f} units.')\n",
-    "print(f'β1={slope:.2f}, SE={se:.2f}, {p_val})')"
+    "print(f'β1={slope:.2f}, SE={se:.2f}, {p_val}')"
    ]
   }
  ],
