--- a/docs/Python.ipynb
+++ b/docs/Python.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/shawnrhoads/executable-book-template/blob/main/docs/Python.ipynb\" target=\"_blank\" style text-align=\"center\">![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)</a>\n",
     "# Python Code\n",
+    "\n",
     "This is a Jupyter Notebook with a Python kernel."
    ]
   },
