--- a/_sources/jupyter.ipynb
+++ b/_sources/jupyter.ipynb
@@ -179,15 +179,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Let's include the course logo below.\n",
-    "\n",
-    "```{tab} Markdown Input 9\n",
-    "`![logo](https://github.com/shawnrhoads/gu-psyc-347/raw/master/docs/static/images/logo-background.jpg)`\n",
-    "```\n",
-    " \n",
-    "```{tab} Markdown Output 9\n",
-    "![logo](https://github.com/shawnrhoads/gu-psyc-347/raw/master/docs/static/images/logo-background.jpg)\n",
-    "```\n"
+    "Let's include the course logo below.\r\n",
+    "\r\n",
+    "```{tab} Markdown Input 9\r\n",
+    "`![logo](https://jupyter.org/assets/main-logo.svg)`\r\n",
+    "```\r\n",
+    " \r\n",
+    "```{tab} Markdown Output 9\r\n",
+    "![logo](https://jupyter.org/assets/main-logo.svg)\r\n",
+    "```\r\n"
    ],
    "metadata": {}
   },
