--- a/docs/jupyter.ipynb
+++ b/docs/jupyter.ipynb
@@ -61,110 +61,110 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Markdown\n",
-    "See this [comprehensive guide to Markdown](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet) or [tutorial](https://www.markdowntutorial.com/). Here are some examples:\n",
-    "\n",
-    "#### Emphasis\n",
-    "\n",
-    "Here is one way to add emphasis to to Markdown cell text.\n",
-    "```{tab} Markdown Input 1\n",
-    "`Emphasis, aka italics, with *asterisks*.`\n",
-    "```\n",
-    "```{tab} Markdown Output 1\n",
-    "Emphasis, aka italics, with *asterisks*.\n",
-    "```\n",
-    "\n",
-    "Here is another way to add emphasis to to Markdown cell text.\n",
-    "```{tab} Markdown Input 2\n",
-    "`Strong emphasis, aka bold, with **asterisks**.`\n",
-    "```\n",
-    "```{tab} Markdown Output 2\n",
-    "Strong emphasis, aka bold, with **asterisks**.\n",
-    "```\n",
-    "\n",
-    "Here is another way to add emphasis to to Markdown cell text.\n",
-    "```{tab} Markdown Input 3\n",
-    "`Combined emphasis with ***asterisks***.`\n",
-    "```\n",
-    "```{tab} Markdown Output 3\n",
-    "Combined emphasis with ***asterisks***.\n",
-    "```\n",
-    "\n",
-    "Here is one way to add strikethough to Markdown cell text.\n",
-    "```{tab} Markdown Input 4\n",
-    "`Strikethrough uses two tildes. ~~Scratch this.~~`\n",
-    "```\n",
-    "```{tab} Markdown Output 4\n",
-    "Strikethrough uses two tildes. ~~Scratch this.~~\n",
-    "```\n",
-    "\n",
-    "#### Links\n",
-    "\n",
-    "Here is one way to insert hyperlinks into Markdown cells.\n",
-    "```{tab} Markdown Input 5\n",
-    "`[I'm an inline-style link](https://www.google.com)`\n",
-    "```\n",
-    "```{tab} Markdown Output 5\n",
-    "[I'm an inline-style link](https://www.google.com)\n",
-    "```\n",
-    "\n",
-    "Here is another way to insert hyperlinks into Markdown cells.\n",
-    "```{tab} Markdown Input 6\n",
-    "`[I'm a reference-style link][Arbitrary case-insensitive reference text]`\n",
-    "```\n",
-    "```{tab} Markdown Output 6\n",
-    "[I'm a reference-style link][Arbitrary case-insensitive reference text]\n",
-    "```\n",
-    "\n",
-    "[arbitrary case-insensitive reference text]: https://shawnrhoads.github.io/gu-psyc-347/\n",
-    "[1]: https://shawnrhoads.github.io/gu-psyc-347/\n",
-    "[link text itself]: https://shawnrhoads.github.io/gu-psyc-347/\n",
-    "\n",
-    "To reference the links above, we include the following text:\n",
-    "```\n",
-    "[arbitrary case-insensitive reference text]: https://shawnrhoads.github.io/gu-psyc-347/\n",
-    "[1]: https://shawnrhoads.github.io/gu-psyc-347/\n",
-    "[link text itself]: https://shawnrhoads.github.io/gu-psyc-347/\n",
-    "```\n",
-    "\n",
-    "URLs and URLs in angle brackets will automatically get turned into links. http://www.example.com or <http://www.example.com> and sometimes \n",
-    "example.com (but not on Github, for example).\n",
-    "\n",
-    "#### Tables\n",
-    "Colons can be used to align columns (note that this may not render properly in the Jupyter Book website).\n",
-    "\n",
-    "````{tab} Markdown Input 7\n",
-    "```\n",
-    "| Tables        | Are           | Cool  |\n",
-    "| :------------ |:-------------:| -----:|\n",
-    "| col 1 is      | left-aligned  |     A |\n",
-    "| col 3 is      | right-aligned |     B |\n",
-    "| col 2 is      | centered      |     C |\n",
-    "```\n",
-    "````\n",
-    "````{tab} Markdown Output 7\n",
-    "| Tables        | Are           | Cool  |\n",
-    "| :------------ |:-------------:| -----:|\n",
-    "| col 1 is      | left-aligned  |     A |\n",
-    "| col 3 is      | right-aligned |     B |\n",
-    "| col 2 is      | centered      |     C |\n",
-    "````\n",
-    "\n",
-    "The outer pipes (|) are optional, and you don't need to make the raw Markdown pretty. You can also use inline Markdown.\n",
-    "\n",
-    "````{tab} Markdown Input 8\n",
-    "```\n",
-    "Markdown | Less | Pretty\n",
-    "--- | --- | ---\n",
-    "*Still* | `renders` | **nicely**\n",
-    "1 | 2 | 3\n",
-    "```\n",
-    "````\n",
-    "````{tab} Markdown Output 8\n",
-    "Markdown | Less | Pretty\n",
-    "--- | --- | ---\n",
-    "*Still* | `renders` | **nicely**\n",
-    "1 | 2 | 3\n",
+    "### Markdown\r\n",
+    "See this [comprehensive guide to Markdown](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet) or [tutorial](https://www.markdowntutorial.com/). Here are some examples:\r\n",
+    "\r\n",
+    "#### Emphasis\r\n",
+    "\r\n",
+    "Here is one way to add emphasis to to Markdown cell text.\r\n",
+    "```{tab} Markdown Input 1\r\n",
+    "`Emphasis, aka italics, with *asterisks*.`\r\n",
+    "```\r\n",
+    "```{tab} Markdown Output 1\r\n",
+    "Emphasis, aka italics, with *asterisks*.\r\n",
+    "```\r\n",
+    "\r\n",
+    "Here is another way to add emphasis to to Markdown cell text.\r\n",
+    "```{tab} Markdown Input 2\r\n",
+    "`Strong emphasis, aka bold, with **asterisks**.`\r\n",
+    "```\r\n",
+    "```{tab} Markdown Output 2\r\n",
+    "Strong emphasis, aka bold, with **asterisks**.\r\n",
+    "```\r\n",
+    "\r\n",
+    "Here is another way to add emphasis to to Markdown cell text.\r\n",
+    "```{tab} Markdown Input 3\r\n",
+    "`Combined emphasis with ***asterisks***.`\r\n",
+    "```\r\n",
+    "```{tab} Markdown Output 3\r\n",
+    "Combined emphasis with ***asterisks***.\r\n",
+    "```\r\n",
+    "\r\n",
+    "Here is one way to add strikethough to Markdown cell text.\r\n",
+    "```{tab} Markdown Input 4\r\n",
+    "`Strikethrough uses two tildes. ~~Scratch this.~~`\r\n",
+    "```\r\n",
+    "```{tab} Markdown Output 4\r\n",
+    "Strikethrough uses two tildes. ~~Scratch this.~~\r\n",
+    "```\r\n",
+    "\r\n",
+    "#### Links\r\n",
+    "\r\n",
+    "Here is one way to insert hyperlinks into Markdown cells.\r\n",
+    "```{tab} Markdown Input 5\r\n",
+    "`[I'm an inline-style link](https://www.google.com)`\r\n",
+    "```\r\n",
+    "```{tab} Markdown Output 5\r\n",
+    "[I'm an inline-style link](https://www.google.com)\r\n",
+    "```\r\n",
+    "\r\n",
+    "Here is another way to insert hyperlinks into Markdown cells.\r\n",
+    "```{tab} Markdown Input 6\r\n",
+    "`[I'm a reference-style link][Arbitrary case-insensitive reference text]`\r\n",
+    "```\r\n",
+    "```{tab} Markdown Output 6\r\n",
+    "[I'm a reference-style link][Arbitrary case-insensitive reference text]\r\n",
+    "```\r\n",
+    "\r\n",
+    "[arbitrary case-insensitive reference text]: https://shawnrhoads.github.io/gu-psyc-347/\r\n",
+    "[1]: https://shawnrhoads.github.io/gu-psyc-347/\r\n",
+    "[link text itself]: https://shawnrhoads.github.io/gu-psyc-347/\r\n",
+    "\r\n",
+    "To reference the links above, we include the following text:\r\n",
+    "```\r\n",
+    "[arbitrary case-insensitive reference text]: https://shawnrhoads.github.io/gu-psyc-347/\r\n",
+    "[1]: https://shawnrhoads.github.io/gu-psyc-347/\r\n",
+    "[link text itself]: https://shawnrhoads.github.io/gu-psyc-347/\r\n",
+    "```\r\n",
+    "\r\n",
+    "URLs and URLs in angle brackets will automatically get turned into links. http://www.example.com or <http://www.example.com> and sometimes \r\n",
+    "example.com (but not on Github, for example).\r\n",
+    "\r\n",
+    "#### Tables\r\n",
+    "Colons can be used to align columns (note that this may not render properly in the Jupyter Book website).\r\n",
+    "\r\n",
+    "````{tab} Markdown Input 7\r\n",
+    "```\r\n",
+    "| Tables        | are           | Cool  |\r\n",
+    "| :------------ |:-------------:| -----:|\r\n",
+    "| row           |       1       |     A |\r\n",
+    "| row           | 2             |     B |\r\n",
+    "| row           |            3  |     C |\r\n",
+    "```\r\n",
+    "````\r\n",
+    "````{tab} Markdown Output 7\r\n",
+    "| Tables        | Are           | Cool  |\r\n",
+    "| :------------ |:-------------:| -----:|\r\n",
+    "| row           |       1       |     A |\r\n",
+    "| row           | 2             |     B |\r\n",
+    "| row           |            3  |     C |\r\n",
+    "````\r\n",
+    "\r\n",
+    "The outer pipes (|) are optional, and you don't need to make the raw Markdown pretty. You can also use inline Markdown.\r\n",
+    "\r\n",
+    "````{tab} Markdown Input 8\r\n",
+    "```\r\n",
+    "Markdown | Less | Pretty\r\n",
+    "--- | --- | ---\r\n",
+    "*Still* | `renders` | **nicely**\r\n",
+    "1 | 2 | 3\r\n",
+    "```\r\n",
+    "````\r\n",
+    "````{tab} Markdown Output 8\r\n",
+    "Markdown | Less | Pretty\r\n",
+    "--- | --- | ---\r\n",
+    "*Still* | `renders` | **nicely**\r\n",
+    "1 | 2 | 3\r\n",
     "````"
    ],
    "metadata": {}
@@ -179,7 +179,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Let's include the course logo below.\r\n",
+    "Let's include the Jupyter logo below.\r\n",
     "\r\n",
     "```{tab} Markdown Input 9\r\n",
     "`![logo](https://jupyter.org/assets/main-logo.svg)`\r\n",
